# processing_image_01

./: .env  README.md  docker-compose.yml
backend/: .env  README.txt  main.py  pyproject.toml
backend/config/: database.py  get_env.py
backend/model/: base.py  image.py  result.py  score.py  subject.py  user.py
backend/router/: api.py  image.py  processing_image.py  result.py  score.py  subject.py  user.py
backend/schemas/: base.py  login.py  result.py  score.py  subject.py  user.py
backend/sql/: create_table.sql
backend/utils/: mail.py  my_csv.py  process.py  utilities.py
desktop/: README.md  package-lock.json  package.json
desktop/src/: App.vue  main.js
desktop/src/components/: index.js
desktop/src/components/CommonTable/: index.vue
desktop/src/components/Dialog/: index.js
desktop/src/components/DialogContainer/: index.vue
desktop/src/components/HeaderBar/: index.vue
desktop/src/components/JMasterItemList/: index.vue
desktop/src/components/JMasterMenuComponent/: index.vue
desktop/src/components/MultipleChoice/: index.vue
desktop/src/components/ProcessingImageBase/: index.vue  (+1 more)
desktop/src/plugins/: axios.js  index.js
desktop/src/router/: index.js
desktop/src/store/: index.js
desktop/src/utils/: common.js  constance.js  index.js  urlPath.js
frontend/: api.py  common.py  main.py  pyproject.toml
mobile/: App.js  README.md  app.json  constants.js  package-lock.json  package.json  tailwind.config.js
mobile/screen/: ChangePassword.js  Dashbroad.js  ForgotPassword.js  Home.js  ListStudent.js  Login.js  Point.js  Result.js
(+16 files in other folders)
