[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
peewee = "^3.16.0"
python-multipart = "^0.0.6"
opencv-python = "^4.7.0"
uvicorn = "^0.20.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
